--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.0",
         "regenerator-runtime": "^0.13.7",
-        "tailwindcss": "^1.7.4"
+        "tailwindcss": "^1.7.4",
+        "react-share": "^4.3.1",
+        "react-helmet" : "^6.1.0"
     },
     "babel": {
         "presets": [
